fix safari flex stretch

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -73,7 +73,7 @@ h1 {
 .photo.container {
   margin: 0.5rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
 }
 .photo.me {
